--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-advanced-chat": "^2.1.0",
     "vue-beautiful-chat": "^2.5.0",
     "vue-router": "^4.3.3",
+    "vue-scroll-reveal": "^2.1.0",
     "vuetify": "^3.6.0-beta.0.0"
   },
   "devDependencies": {
