--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.13",
     "vue-advanced-chat": "^2.1.0",
     "vue-beautiful-chat": "^2.5.0",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^4.3.3",
     "vue-scroll-reveal": "^2.1.0",
     "vuetify": "^3.6.0-beta.0.0"
