--- a/package.json
+++ b/package.json
@@ -12,23 +12,29 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "axios": "^1.8.4",
     "core-js": "^3.8.3",
+    "firebase": "^11.6.0",
+    "pinia": "^3.0.1",
+    "vite": "^6.2.4",
     "vue": "^3.2.13",
     "vue-advanced-chat": "^2.1.0",
     "vue-beautiful-chat": "^2.5.0",
     "vue-i18n": "^9.13.1",
-    "vue-router": "^4.3.3",
+    "vue-router": "^4.5.0",
     "vue-scroll-reveal": "^2.1.0",
     "vuetify": "^3.6.0-beta.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@vitejs/plugin-vue": "^5.2.3",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "path": "^0.12.7"
   },
   "eslintConfig": {
     "root": true,
