Finish web scraping and blog section

--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "axios": "^1.8.4",
     "core-js": "^3.8.3",
     "fs": "^0.0.1-security",
+    "mongoose": "^8.13.1",
     "path": "^0.12.7",
     "playwright": "^1.51.1",
+    "puppeteer": "^24.6.0",
+    "puppeteer-core": "^24.6.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "vue": "^3.2.13",
     "vue-advanced-chat": "^2.1.0",
     "vue-beautiful-chat": "^2.5.0",
