Locate to branch esmart-creator

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@google/generative-ai": "^0.24.0",
+    "axios": "^1.8.4",
     "core-js": "^3.8.3",
+    "pg-hstore": "^2.3.4",
     "vue": "^3.2.13",
     "vue-advanced-chat": "^2.1.0",
     "vue-beautiful-chat": "^2.5.0",
