--- a/service/requirements.txt
+++ b/service/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.103.1
 uvicorn==0.23.2
 python-multipart==0.0.6
+gradio==3.50.2
 diffusers>=0.23.1
 transformers>=4.38.0
 accelerate>=0.25.0
