--- a/service/requirements.txt
+++ b/service/requirements.txt
@@ -6,8 +6,8 @@ diffusers>=0.23.1
 transformers>=4.38.0
 accelerate>=0.25.0
 safetensors>=0.4.0
-torch==2.0.0
-numpy>=2.0.0
+torch>=2.0.0
+numpy~=1.24.0
 Pillow>=10.2.0
 requests==2.31.0
 python-dotenv==1.0.0
