--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "nodemailer": "^6.10.1",
+    "openai": "^4.95.0"
   }
 }
