--- a/package.json
+++ b/package.json
@@ -12,21 +12,24 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
-    "axios": "^1.8.4",
     "@google/generative-ai": "^0.24.0",
+    "axios": "^1.8.4",
     "core-js": "^3.8.3",
     "firebase": "^11.6.0",
     "fs": "^0.0.1-security",
+    "marked": "^15.0.8",
     "mongoose": "^8.13.1",
+    "nodemailer": "^6.10.1",
     "path": "^0.12.7",
+    "pg-hstore": "^2.3.4",
     "pinia": "^3.0.1",
     "playwright": "^1.51.1",
     "puppeteer": "^24.6.0",
     "puppeteer-core": "^24.6.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "serverless-http": "^3.2.0",
     "vite": "^6.2.4",
-    "pg-hstore": "^2.3.4",
     "vue": "^3.2.13",
     "vue-advanced-chat": "^2.1.0",
     "vue-beautiful-chat": "^2.5.0",
