--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "npm install && npm run build && cd ../backend && npm install && npm run build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "@google/generative-ai": "^0.24.0",
     "axios": "^1.8.4",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
     "firebase": "^11.6.0",
     "fs": "^0.0.1-security",
     "marked": "^15.0.8",
