--- a/package.json
+++ b/package.json
@@ -37,7 +37,15 @@
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.5.0",
     "vue-scroll-reveal": "^2.1.0",
-    "vuetify": "^3.6.0-beta.0.0"
+    "vuetify": "^3.6.0-beta.0.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.18.2",
+    "knex": "^3.1.0",
+    "pg": "^8.14.1",
+    "pg-promise": "^11.13.0",
+    "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.2",
+    "umzug": "^3.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
