--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,7 @@
   command = "npm run build"
   publish = "dist"
   functions = "server/functions"
+  node_version = "22"
 
 [dev]
     port = 8888
@@ -9,6 +10,8 @@
     framework = "#auto"
     
 [functions]
+  node_bundler = "esbuild"
+  esbuild_options = { format = "esm" }
   [functions.max_duration]
-    duration = 30
+    duration = 60
   external_node_modules = ["sequelize", "cors", "pg"]
