--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "npm install && vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "postinstall": "npm install pg"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
@@ -17,20 +16,27 @@
     "axios": "^1.8.4",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.18.2",
     "firebase": "^11.6.0",
     "fs": "^0.0.1-security",
+    "knex": "^3.1.0",
     "marked": "^15.0.8",
     "mongoose": "^8.13.1",
     "nodemailer": "^6.10.1",
     "path": "^0.12.7",
     "pg-hstore": "^2.3.4",
+    "pg-promise": "^11.13.0",
     "pinia": "^3.0.1",
     "playwright": "^1.51.1",
     "puppeteer": "^24.6.0",
     "puppeteer-core": "^24.6.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.2",
     "serverless-http": "^3.2.0",
+    "umzug": "^3.8.2",
     "vite": "^6.2.4",
     "vue": "^3.2.13",
     "vue-advanced-chat": "^2.1.0",
@@ -38,15 +44,7 @@
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.5.0",
     "vue-scroll-reveal": "^2.1.0",
-    "vuetify": "^3.6.0-beta.0.0",
-    "dotenv": "^16.4.7",
-    "express": "^4.18.2",
-    "knex": "^3.1.0",
-    "pg": "^8.14.1",
-    "pg-promise": "^11.13.0",
-    "sequelize": "^6.37.7",
-    "sequelize-cli": "^6.6.2",
-    "umzug": "^3.8.2"
+    "vuetify": "^3.6.0-beta.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
