--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.13.1",
     "nodemailer": "^6.10.1",
     "path": "^0.12.7",
+    "pg": "^8.15.6",
     "pg-hstore": "^2.3.4",
     "pg-promise": "^11.13.0",
     "pinia": "^3.0.1",
@@ -55,7 +56,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "webpack-node-externals": "^3.0.0"
   },
   "eslintConfig": {
     "root": true,
