--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@google/generative-ai": "^0.24.0",
+    "assert": "^2.1.0",
     "axios": "^1.8.4",
-    "core-js": "^3.8.3",
+    "babel-loader": "^10.0.0",
+    "core-js": "^3.42.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
-    "firebase": "^11.6.0",
+    "firebase": "^11.9.0",
     "fs": "^0.0.1-security",
+    "html-webpack-plugin": "^5.6.3",
+    "https-browserify": "^1.0.0",
     "knex": "^3.1.0",
     "marked": "^15.0.12",
     "mongoose": "^8.13.1",
@@ -37,7 +41,10 @@
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2",
     "serverless-http": "^3.2.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "umzug": "^3.8.2",
+    "url": "^0.11.4",
     "vite": "^6.2.4",
     "vue": "^3.2.13",
     "vue-advanced-chat": "^2.1.0",
@@ -54,9 +61,10 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^9.33.0",
     "path": "^0.12.7",
+    "vue-eslint-parser": "^10.1.3",
     "webpack-node-externals": "^3.0.0"
   },
   "eslintConfig": {
@@ -65,11 +73,15 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/vue3-essential",
+      "plugin:vue/vue3-recommended",
       "eslint:recommended"
     ],
+    "parser": "vue-eslint-parser",
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+      "parser": "@babel/eslint-parser",
+      "ecmaVersion": 2020,
+      "sourceType": "module",
+      "requireConfigFile": false
     },
     "rules": {}
   },
